# scache

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  RoadMap.md
src/: cache.h  helper.cpp  helper.h  main.cpp  netserver.cpp  netserver.h
