cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 17)
SET(CMAKE_BUILD_TYPE "Debug") 
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb -pthread")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -pthread")

FIND_PACKAGE( Boost 1.67 COMPONENTS program_options REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
message(STATUS,"Boost_INCLUDE_DIR = ",${Boost_INCLUDE_DIR})
message(STATUS,"Boost_LIBRARIES = ",${Boost_LIBRARIES})
include_directories(src)
add_executable(a.out src/main.cpp)
TARGET_LINK_LIBRARIES(a.out LINK_PUBLIC ${Boost_LIBRARIES} )
