cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 17)
SET(CMAKE_BUILD_TYPE "Debug") 
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb -pthread -std=c++17")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -pthread -std=c++17")

FIND_PACKAGE( Boost 1.67 COMPONENTS program_options system REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
message(STATUS,"Boost_INCLUDE_DIR = ",${Boost_INCLUDE_DIR})
message(STATUS,"Boost_LIBRARIES = ",${Boost_LIBRARIES})
include_directories(src)
add_library(Mynet src/netserver.cpp)
add_library(Myhelper src/helper.cpp)
add_executable(a.out src/main.cpp)
TARGET_LINK_LIBRARIES(a.out LINK_PUBLIC ${Boost_LIBRARIES} Mynet Myhelper)
